--- a/src/main/resources/com/pls/view/BookOverview.fxml
+++ b/src/main/resources/com/pls/view/BookOverview.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pls.address.BookOverviewController">
+<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pls.address.BookOverviewController">
     <children>
         <SplitPane dividerPositions="0.29797979797979796" layoutX="153.0" layoutY="70.0" prefHeight="300.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <items>
@@ -59,9 +59,9 @@
                         </GridPane>
                         <ButtonBar layoutX="54.0" layoutY="250.0" AnchorPane.bottomAnchor="10.0" AnchorPane.rightAnchor="10.0">
                             <buttons>
-                                <Button mnemonicParsing="false" text="New..." />
-                                <Button mnemonicParsing="false" text="Edit..." />
-                                <Button mnemonicParsing="false" text="Delete" />
+                                <Button mnemonicParsing="false" onAction="#handleNewBook" text="New..." />
+                                <Button mnemonicParsing="false" onAction="#handleEditBook" text="Edit..." />
+                                <Button mnemonicParsing="false" onAction="#handleDeleteBook" text="Delete" />
                             </buttons>
                         </ButtonBar>
                     </children>
