--- a/src/main/resources/com/pls/view/RootLayout.fxml
+++ b/src/main/resources/com/pls/view/RootLayout.fxml
@@ -5,13 +5,18 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane prefHeight="400.0" prefWidth="600.0" stylesheets="@DarkTheme.css" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.pls.address.RootLayoutController">
    <top>
       <MenuBar BorderPane.alignment="CENTER">
         <menus>
           <Menu mnemonicParsing="false" text="File">
             <items>
-              <MenuItem mnemonicParsing="false" text="Close" />
+                <MenuItem mnemonicParsing="false" text="New" onAction="#handleNew" />
+                <MenuItem mnemonicParsing="false" text="Open" onAction="#handleOpen" />
+                <MenuItem mnemonicParsing="false" text="Save" onAction="#handleSave" />
+                <MenuItem mnemonicParsing="false" text="Save as" onAction="#handleSaveAs" />
+                <MenuItem mnemonicParsing="false" text="Exit" onAction="#handleExit" />
+
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Edit">
